Added activities and enabled view binding

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">UNO Client</string>
+    <string name="app_name">UNO</string>
+    <string name="play">Play</string>
 </resources>
